tests/base/parser/bad/exps/exp_t-fun-lparen-id-colon-with.scilexp
fun (x: bool) => x (* should be Bool *)
